--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "v1",
   "description": "Personal Website V1",
   "version": "1.0.0",
-  "author": "Yashita Namdeo <yashita.namdeo2000@gmail.com>",
+  "author": "Osazee Jedidiah O. <oghagbonosazee20@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/yashitanamdeo/yashitanamdeo.github.io"
+    "url": "https://github.com/osazeejedi/osazeejedi.github.io"
   },
   "keywords": [
     "gatsby"
